--- a/java/21/Dockerfile
+++ b/java/21/Dockerfile
@@ -20,17 +20,15 @@
 # SOFTWARE.
 #
 
-FROM        --platform=$TARGETOS/$TARGETARCH eclipse-temurin:21-jdk
+FROM        --platform=$TARGETOS/$TARGETARCH eclipse-temurin:21-jre-alpine
 
 LABEL       author="Matthew Penner" maintainer="matthew@pterodactyl.io"
 
 LABEL       org.opencontainers.image.source="https://github.com/pterodactyl/yolks"
 LABEL       org.opencontainers.image.licenses=MIT
 
-RUN 				apt-get update -y \
-						&& apt-get install -y lsof curl ca-certificates openssl git tar sqlite3 fontconfig libfreetype6 tzdata iproute2 libstdc++6 \
-						&& rm -rf /var/lib/apt/lists/* \
-						&& useradd -d /home/container -m container
+RUN 		apk add --no-cache lsof curl ca-certificates openssl git tar sqlite fontconfig freetype tzdata iproute2 libstdc++ \
+				&& adduser -h /home/container -D container
 
 USER        container
 ENV         USER=container HOME=/home/container
