java: use alpine as base image

--- a/java/21/Dockerfile
+++ b/java/21/Dockerfile
@@ -20,14 +20,14 @@
 # SOFTWARE.
 #
 
-FROM        --platform=$TARGETOS/$TARGETARCH eclipse-temurin:21-jre-alpine
+FROM        --platform=$TARGETOS/$TARGETARCH alpine
 
 LABEL       author="Matthew Penner" maintainer="matthew@pterodactyl.io"
 
 LABEL       org.opencontainers.image.source="https://github.com/pterodactyl/yolks"
 LABEL       org.opencontainers.image.licenses=MIT
 
-RUN 		apk add --no-cache lsof curl ca-certificates openssl git tar sqlite fontconfig freetype tzdata iproute2 libstdc++ \
+RUN 		apk add --no-cache openjdk21-jre lsof curl ca-certificates openssl git tar sqlite fontconfig freetype tzdata iproute2 libstdc++ \
 				&& adduser -h /home/container -D container
 
 USER        container
@@ -35,4 +35,4 @@ ENV         USER=container HOME=/home/container
 WORKDIR     /home/container
 
 COPY        ./../entrypoint.sh /entrypoint.sh
-CMD         [ "/bin/bash", "/entrypoint.sh" ]
+CMD         [ "/bin/sh", "/entrypoint.sh" ]
